; ModuleID = '/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio_cm.c_riocm_outb_msg_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rapidio/extr_rio_cm.c_riocm_outb_msg_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rio_mport = type { i32 }
%struct.cm_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rio_mport*, i8*, i32, i32)* @riocm_outb_msg_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @riocm_outb_msg_event(%struct.rio_mport* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rio_mport*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.cm_dev*, align 8
  store %struct.rio_mport* %0, %struct.rio_mport** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.cm_dev*
  store %struct.cm_dev* %11, %struct.cm_dev** %9, align 8
  %12 = load %struct.cm_dev*, %struct.cm_dev** %9, align 8
  %13 = icmp ne %struct.cm_dev* %12, null
  br i1 %13, label %14, label %24

14:                                               ; preds = %4
  %15 = load %struct.cm_dev*, %struct.cm_dev** %9, align 8
  %16 = getelementptr inbounds %struct.cm_dev, %struct.cm_dev* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @rio_mport_is_running(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %14
  %21 = load %struct.cm_dev*, %struct.cm_dev** %9, align 8
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @rio_txcq_handler(%struct.cm_dev* %21, i32 %22)
  br label %24

24:                                               ; preds = %20, %14, %4
  ret void
}

declare dso_local i64 @rio_mport_is_running(i32) #1

declare dso_local i32 @rio_txcq_handler(%struct.cm_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
